# DuoAutoFiller

./: .gitignore  CODE_OF_CONDUCT.md  README.md  TODO.txt  filler.js  injection.js  manifest.json
.github/workflows/: node.js.yml
DuoAutoFillerFinal/: .web-extension-id
assets/: Icons.ai  LogoCompare.ai  UserIcon.ai
browser/DuoAutoFillerFinal/: manifest.json
browser/assets/: CopyIcon.ai  Icons.ai  KeyIcon.ai
browser/css/: colors.csv  main.css  redesigned.css
browser/html/: account.html  changepassword.html  encryption.html  newkey.html  signup.html
browser/javascript/: externalHandler.js  helper.js  injection.js  internalHandler.js  newkeySpecific.js  signupSpecific.js
browser/javascript-es6/: background_sync.js  database_syncing.js  index.js  package-lock.json  package.json  page explanation.txt  pages.json  query_storage.js  server_contact.js  sync_storage.js
css/: colors.csv  main.css  redesigned.css  reset_css.py
html/: account.html  changepassword.html  encryption.html  home.html  login.html  main.html  newkey.html  password-reset.html  signup.html
javascript/: externalHandler.js  filler.js  filler2.js  helper.js  injection.js  interaction.js  internalHandler.js  newkeySpecific.js
javascript-es6/: encryption.js  external_main.js  index.js  internal_main.js  package-lock.json  package.json  page_interaction.js  pages.json  server_contact.js  sync_storage.js  userInteraction.js
notes/: Authentication Protocol.txt
server/: db.sqlite3  manage.py
server/lambda_rust/user_authorizer/: Cargo.toml
server/lambda_rust/user_authorizer/src/: main.rs
(+151 files in other folders)
