[package]
name = "user_authorizer"
version = "0.1.0"
authors = ["msdrigg <msdrigg@clemson.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
rusoto_dynamodb = { git = "https://github.com/rusoto/rusoto", branch = "master"}
